# escosol-land-monitoring

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
ae-data-processing/: combine-data.py  extraction.py  pdf_to_data.py  utils.py
ae-data-processing/tests/: config.py  test_context_extraction.py  test_geo_extraction.py  test_land_surface_extraction.py  test_power_extraction.py
ae-data-processing/tests/expectations/: sample_1_context.md  sample_2_context.md  sample_3_context.md
ae-data-processing/tests/samples/: sample_1.md  sample_2.md  sample_3.md  sample_absence_avis_1.md  sample_absence_avis_2.md  sample_cas_par_cas_1.md  sample_cas_par_cas_2.md
ae-labeling/: 20260310T152523_session.md
ae-scraping/: README.md  config.py  full_scraping.py  mrae_archive_pdf_downloader.py
ae-scraping/archive/: aura.py  bretagne.py  config.py  corse.py  guadeloupe.py  guyane.py  nord_pas_de_calais.py  nouvelle_aquitaine.py  occitanie.py  pays_de_la_loire.py  side.py  somme.py  utils.py
ae-scraping/dl-pdfs/: extract_year_links.py
ae-scraping/mrae/: __init__.py  extract_relevant_pdf_links.py  extract_year_links.py
ae-scraping/utils/: data.py  download.py  scraping.py
data-analysis/clustering/: dbscan_clustering.py  pyproject.toml
data-analysis/ocs/: .gitignore  README.md  photovoltaique_sol_ddl.sql  pyproject.toml
data-analysis/ocs/data_analysis/: analysis.py  enaf.py  test_enaf.py
data-analysis/ocs/data_processing/: ocs_dataset.py
ml_classification/: dataset_creation.py
ml_classification/zero_shot/lm_studio/: config.py  llm_zero_shot_classification_arena.py  llm_zero_shot_classification_inference.py  lm_studio.py  prompt_20260424.md  prompt_20260424_2.md  prompt_20260430.md
