[project]
name = "escosol-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pymupdf==1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "selenium>=4.41.0",
    "httpx-retries>=0.4.6",
    # For ML classification :
    "torch>=2.10.0",
    "transformers[torch]>=5.0",
    "sentencepiece>=0.2.1",
    "scikit-learn>=1.8.0",
    "lightning[extra]>=2.6.0",
    "spacy>=3.8.11",
    "fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl ",
    "rapidfuzz>=3.14.3",
    "torchvision>=0.25.0",
    "evaluate>=0.4.6",
    "setfit>=1.1.3",
    "tensorboard>=2.20.0",
    "polars>=1.38.0",
    "mistral-common>=1.9.0",
    "lmstudio>=1.5.0",
    "fastexcel>=0.20.1",
    "duckdb>=1.5.1",
    "shapely>=2.1.2",
    "geopandas>=1.1.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.3.0",
    "jupyterlab-lsp>=5.2.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.14",
]

[tool.uv.workspace]
members = [
    "ae_labeling",
    "data-analysis/clustering",
]
