[project]
name = "escosol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "marimo[recommended]>=0.19.2",
    "plotly[express]>=6.5.2",
    "py7zr>=1.1.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "spatial-polars[lonboard]>=0.2.3",
    "tqdm>=4.67.1",
]

[tool.marimo.runtime]
output_max_bytes = 50_000_000
